--- a/committee.html
+++ b/committee.html
@@ -139,7 +139,18 @@
             <h3> Program Committee </h3>
             <div style="margin: 1%;">
                 <ul data-aos="fade-right" data-aos-delay="300" data-aos-duration="800">
-                    T.B.A
+                    <li> <strong> Katja Tuma</strong>, Eindhoven University of Technology (the Netherlands) </li>
+                    <li> <strong> Emad Shihab</strong>, Concordia University (Canada) </li>
+                    <li> <strong> Roshan Rajapakse</strong>, The University of Adelaide (Australia) </li>
+                    <li> <strong> Péter Hegedűs</strong>, University of Szeged (Hungary) </li>
+                    <li> <strong> Muhammad Ikram</strong>, Macquarie University (Australia) </li>
+                    <li> <strong> Clemente Izurieta</strong>, Montana State University (USA) </li>
+                    <li> <strong> Maxwell Young</strong>, Mississippi State University (USA) </li>
+                    <li> <strong> Moritz Mock</strong>, University of Bozen–Bolzano (Italy) </li>
+                    <li> <strong> The Duy Phan</strong>, Vietnam National University (Vietnam) </li>
+                    <li> <strong> Antonino Sabetta</strong>, SAP Security Research (France) </li>
+                    <li> <strong> Diaeddin Rimawi</strong>, Free University of Bozen–Bolzano (Italy) </li>
+                    <li> <strong> Bhagya Chembakottu</strong>, McGill University (Canada) </li>
                 </ul>
             </div>
         </div>
