--- a/committee.html
+++ b/committee.html
@@ -146,7 +146,7 @@
                     <li> <strong> Muhammad Ikram</strong>, Macquarie University (Australia) </li>
                     <li> <strong> Clemente Izurieta</strong>, Montana State University (USA) </li>
                     <li> <strong> Maxwell Young</strong>, Mississippi State University (USA) </li>
-                    <li> <strong> Moritz Mock</strong>, University of Bozen–Bolzano (Italy) </li>
+                    <li> <strong> Moritz Mock</strong>, Free University of Bozen–Bolzano (Italy) </li>
                     <li> <strong> The Duy Phan</strong>, Vietnam National University (Vietnam) </li>
                     <li> <strong> Antonino Sabetta</strong>, SAP Security Research (France) </li>
                     <li> <strong> Diaeddin Rimawi</strong>, Free University of Bozen–Bolzano (Italy) </li>
