--- a/committee.html
+++ b/committee.html
@@ -151,6 +151,8 @@
                     <li> <strong> Antonino Sabetta</strong>, SAP Security Research (France) </li>
                     <li> <strong> Diaeddin Rimawi</strong>, Free University of Bozen–Bolzano (Italy) </li>
                     <li> <strong> Bhagya Chembakottu</strong>, McGill University (Canada) </li>
+                    <li> <strong> Boyang Yang</strong>, Yanshan University (China) </li>
+                    <li> <strong> Giammaria Giordano</strong>, University of Salerno (Italy) </li>
                 </ul>
             </div>
         </div>
